2004-11-28  Bradley Bell  <btb@icculus.org>

	* arch/sdl/digi.c, main/digi.h: original prototype in d2src is
	wrong, I guess

	* arch/sdl/digi.c, arch/win32/midi.c, main/Makefile.am,
	main/digiobj.c, main/digi.h, main/kludge.c, main/old/digiobj.c:
	ripped object stuff out of digi.c, now using digiobj.c. get rid of
	a bunch of kludges, sound should be more true to original game now

	* acinclude.m4, cygconf: put sdl.m4 in acinclude.m4, to make
	autogen simpler

2004-11-27  Bradley Bell  <btb@icculus.org>

	* main/text.c, main/text.h, main/titles.c: added function to
	properly decode multi-line strings

	* Makefile.am, arch/sdl/digi.c, arch/win32/Makefile.am,
	arch/win32/hmpfile.c, arch/win32/midi.c, main/kludge.c: enabled
	midi on win32

	* main/bm.c, main/polyobj.c: better fix for model data freeing bug

	* main/inferno.c: enable logo screens for shareware/oem

2004-11-26  Bradley Bell  <btb@icculus.org>

	* main/mission.c, main/titles.c: fix d1 briefing glitches

	* main/game.c: free up cpu by not calling timer_delay so many
	times (fixes Bug 2034)

	* main/gameseq.c: enable briefing screens for mac shareware

	* 2d/bitblt.c: disable Assert so the credits work in opengl (gl
	doesn't care if it draws offscreen, I guess)

	* main/credits.c: reduce flickering in credits w/opengl

2004-11-25  Bradley Bell  <btb@icculus.org>

	* 2d/font.c: get rid of clipping in ogl_internal_string, causes
	garbage on windows for some reason.

	* 2d/font.c: fixed opengl menu font bug, caused by doing
	arithmetic on signed chars.

2004-11-23  Bradley Bell  <btb@icculus.org>

	* debian/control: depend on libsdl1.2-dev instead of libsdl-dev

2004-11-22  Bradley Bell  <btb@icculus.org>

	* configure.ac, arch/include/joy.h, arch/linux/joydefs.c,
	arch/linux/joystick.c, arch/linux/include/joystick.h,
	arch/sdl/joy.c, main/kconfig.c: Fix sdl joystick axis problem, all
	arch use global variable joy_num_axes

2004-11-19  Chris Taylor  <c.taylor@student.curtin.edu.au>
